# solana-raffle

./: .gitignore  Anchor.toml  README.md  package.json
programs/solana-donate/: Cargo.toml
programs/solana-donate/src/: lib.rs
programs/solana-donate/src/constants/: constants.rs
programs/solana-donate/src/errors/: errors.rs
programs/solana-donate/src/instructions/: create_donation.rs  end_donation.rs  initialize.rs  join_donation.rs  mod.rs  update_auth.rs  update_donation.rs
programs/solana-donate/src/state/: donation_info.rs  global_state.rs  mod.rs  user_info.rs
programs/solana-raffle/: Cargo.toml
programs/solana-raffle/src/: lib.rs
programs/solana-raffle/src/constants/: constants.rs
programs/solana-raffle/src/errors/: errors.rs
programs/solana-raffle/src/instructions/: create_raffle.rs  end_raffle.rs  initialize.rs  join_raffle.rs  mod.rs  update_config.rs  update_raffle.rs
programs/solana-raffle/src/state/: global_state.rs  mod.rs  raffle_info.rs  user_info.rs
tests/: solana_donate.ts  solana_raffle.ts
